tests/fixtures/errors/generic_type_mismatch.chisa
let a: Option<number> = Option.Some(1)
let b: Option<boolean> = a
